--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -13,45 +13,45 @@ jobs:
   Windows-build:
     runs-on: windows-latest
     steps:
-    - name: Init Python 3.10.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10.10'
+      - name: Init Python 3.10.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.10"
 
-    - name: Install dependent packages
-      run: |
-        python -m pip install --upgrade pip
-        pip install wheel numpy==1.23.5 pyparsing==3.0.9 wxpython==4.2.0 pyinstaller==5.7.0
-        git clone --depth=1 -b master https://github.com/YaoShuwei/nas-tools-unlock --recurse-submodule
-        cd nas-tools-unlock
-        pip install -r requirements.txt
-        echo ("NASTOOL_CONFIG=D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/config/config.yaml") >> $env:GITHUB_ENV
-        echo $env:NASTOOL_CONFIG
-      shell: pwsh
+      - name: Install dependent packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel numpy==1.23.5 pyparsing==3.0.9 wxpython==4.2.0 pyinstaller==5.7.0
+          git clone --depth=1 -b master https://github.com/yukiChow/nas-tools-unlock --recurse-submodule
+          cd nas-tools-unlock
+          pip install -r requirements.txt
+          echo ("NASTOOL_CONFIG=D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/config/config.yaml") >> $env:GITHUB_ENV
+          echo $env:NASTOOL_CONFIG
+        shell: pwsh
 
-    - name: Package through pyinstaller
-      run: |
-        cd nas-tools-unlock
-        dir
-        copy .\package\rely\upx.exe c:\hostedtoolcache\windows\python\3.10.10\x64\Scripts
-        copy .\package\rely\hook-cn2an.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
-        copy .\package\rely\hook-zhconv.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
-        copy .\package\rely\hook-iso639.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
-        copy .\third_party.txt .\package
-        copy .\package\rely\template.jinja2 c:\hostedtoolcache\windows\Python\3.10.10\x64\lib\site-packages\setuptools\_vendor\pyparsing\diagram
-        xcopy .\web c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\web\ /e
-        xcopy .\config c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\config\ /e
-        xcopy .\scripts c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\scripts\ /e
-        cd package
-        pyinstaller nas-tools.spec
-        dir  D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist
-      shell: pwsh
+      - name: Package through pyinstaller
+        run: |
+          cd nas-tools-unlock
+          dir
+          copy .\package\rely\upx.exe c:\hostedtoolcache\windows\python\3.10.10\x64\Scripts
+          copy .\package\rely\hook-cn2an.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
+          copy .\package\rely\hook-zhconv.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
+          copy .\package\rely\hook-iso639.py c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\pyinstaller\hooks
+          copy .\third_party.txt .\package
+          copy .\package\rely\template.jinja2 c:\hostedtoolcache\windows\Python\3.10.10\x64\lib\site-packages\setuptools\_vendor\pyparsing\diagram
+          xcopy .\web c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\web\ /e
+          xcopy .\config c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\config\ /e
+          xcopy .\scripts c:\hostedtoolcache\windows\python\3.10.10\x64\lib\site-packages\scripts\ /e
+          cd package
+          pyinstaller nas-tools.spec
+          dir  D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist
+        shell: pwsh
 
-    - name: Upload windows file
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows
-        path: D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools.exe
+      - name: Upload windows file
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows
+          path: D:/a/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/package/dist/nas-tools.exe
 
   Linux-build-amd64:
     runs-on: ubuntu-latest
@@ -59,13 +59,13 @@ jobs:
       - name: Init Python 3.10.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.10'
+          python-version: "3.10.10"
 
       - name: Install dependent packages
         run: |
           python -m pip install --upgrade pip
           pip install wheel pyinstaller==5.7.0
-          git clone --depth=1 -b master https://github.com/YaoShuwei/nas-tools-unlock --recurse-submodule
+          git clone --depth=1 -b master https://github.com/yukiChow/nas-tools-unlock --recurse-submodule
           cd nas-tools-unlock
           pip install -r requirements.txt
           echo ("NASTOOL_CONFIG=/home/runner/work/nas-tools-unlock/nas-tools-unlock/nas-tools-unlock/config/config.yaml") >> $env:GITHUB_ENV
@@ -183,13 +183,13 @@ jobs:
       - name: Init Python 3.10.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.10'
+          python-version: "3.10.10"
 
       - name: Install dependent packages
         run: |
           python -m pip install --upgrade pip
           pip install wheel numpy==1.23.5 pyparsing==3.0.9 pyinstaller==5.7.0
-          git clone --depth=1 -b master https://github.com/YaoShuwei/nas-tools-unlock --recurse-submodule
+          git clone --depth=1 -b master https://github.com/yukiChow/nas-tools-unlock --recurse-submodule
           cd nas-tools-unlock
           pip install -r requirements.txt
           CURRENT_DIR=$(pwd)
@@ -226,50 +226,58 @@ jobs:
   Create-release_Send-message:
     permissions: write-all
     runs-on: ubuntu-latest
-    needs: [Windows-build, Linux-build-amd64, Linux-build-arm64, Linux-build-amd64-musl, Linux-build-arm64-musl, Mac-build]
+    needs:
+      [
+        Windows-build,
+        Linux-build-amd64,
+        Linux-build-arm64,
+        Linux-build-amd64-musl,
+        Linux-build-arm64-musl,
+        Mac-build,
+      ]
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Release version
-      id: release_version
-      run: |
-        app_version=$(cat version.py |sed -ne "s/APP_VERSION\s=\s'v\(.*\)'/\1/gp")
-        echo "app_version=$app_version" >> $GITHUB_ENV
+      - name: Release version
+        id: release_version
+        run: |
+          app_version=$(cat version.py |sed -ne "s/APP_VERSION\s=\s'v\(.*\)'/\1/gp")
+          echo "app_version=$app_version" >> $GITHUB_ENV
 
-    - name: Download exe and rename
-      uses: actions/download-artifact@v3
-    - name: get release_informations
-      shell: bash
-      run: |
-        pwd
-        ls -all
-        mkdir releases
-        mv ./windows/nas-tools.exe /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_win_v${{ env.app_version }}.exe
-        mv ./linux-amd64/nas-tools-unlock.linux.amd64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_amd64_v${{ env.app_version }}
-        mv ./linux-arm64/nas-tools-unlock.linux.arm64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_arm64_v${{ env.app_version }}
-        mv ./linux-musl-amd64/nas-tools-unlock.linux.musl.amd64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_musl_amd64_v${{ env.app_version }}
-        mv ./linux-musl-arm64/nas-tools-unlock.linux.musl.arm64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_musl_arm64_v${{ env.app_version }}
-        mv ./macos/nas-tools-unlock.macos /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_macos_v${{ env.app_version }}
-        pwd
-        ls -all
+      - name: Download exe and rename
+        uses: actions/download-artifact@v3
+      - name: get release_informations
+        shell: bash
+        run: |
+          pwd
+          ls -all
+          mkdir releases
+          mv ./windows/nas-tools.exe /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_win_v${{ env.app_version }}.exe
+          mv ./linux-amd64/nas-tools-unlock.linux.amd64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_amd64_v${{ env.app_version }}
+          mv ./linux-arm64/nas-tools-unlock.linux.arm64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_arm64_v${{ env.app_version }}
+          mv ./linux-musl-amd64/nas-tools-unlock.linux.musl.amd64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_musl_amd64_v${{ env.app_version }}
+          mv ./linux-musl-arm64/nas-tools-unlock.linux.musl.arm64 /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_linux_musl_arm64_v${{ env.app_version }}
+          mv ./macos/nas-tools-unlock.macos /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/nastool_macos_v${{ env.app_version }}
+          pwd
+          ls -all
 
-    - name: Create release
-      id: create_release
-      uses: actions/create-release@latest
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      with:
-        tag_name: v${{ env.app_version }}
-        release_name: v${{ env.app_version }}
-        body: ${{ github.event.commits[0].message }}
-        draft: false
-        prerelease: false
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          tag_name: v${{ env.app_version }}
+          release_name: v${{ env.app_version }}
+          body: ${{ github.event.commits[0].message }}
+          draft: false
+          prerelease: false
 
-    - name: Upload release asset
-      uses: dwenegar/upload-release-assets@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      with:
-        release_id: ${{ steps.create_release.outputs.id }}
-        assets_path: |
+      - name: Upload release asset
+        uses: dwenegar/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          release_id: ${{ steps.create_release.outputs.id }}
+          assets_path: |
             /home/runner/work/nas-tools-unlock/nas-tools-unlock/releases/
