--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,21 @@
 FROM alpine AS Builder
 RUN apk add --no-cache --virtual .build-deps \
-        libffi-dev \
-        gcc \
-        musl-dev \
-        libxml2-dev \
-        libxslt-dev \
-    && apk add --no-cache $(echo $(wget --no-check-certificate -qO- https://raw.githubusercontent.com/YaoShuwei/nas-tools-unlock/master/package_list.txt)) \
-    && ln -sf /usr/bin/python3 /usr/bin/python \
-    && curl https://rclone.org/install.sh | bash \
-    && if [ "$(uname -m)" = "x86_64" ]; then ARCH=amd64; elif [ "$(uname -m)" = "aarch64" ]; then ARCH=arm64; fi \
-    && curl https://dl.min.io/client/mc/release/linux-${ARCH}/mc --create-dirs -o /usr/bin/mc \
-    && chmod +x /usr/bin/mc \
-    && pip install --upgrade pip setuptools wheel \
-    && pip install cython \
-    && pip install -r https://raw.githubusercontent.com/YaoShuwei/nas-tools-unlock/master/requirements.txt \
-    && apk del --purge .build-deps \
-    && rm -rf /tmp/* /root/.cache /var/cache/apk/*
+    libffi-dev \
+    gcc \
+    musl-dev \
+    libxml2-dev \
+    libxslt-dev &&
+    apk add --no-cache $(echo $(wget --no-check-certificate -qO- https://raw.githubusercontent.com/yukiChow/nas-tools-unlock/master/package_list.txt)) &&
+    ln -sf /usr/bin/python3 /usr/bin/python &&
+    curl https://rclone.org/install.sh | bash &&
+    if [ "$(uname -m)" = "x86_64" ]; then ARCH=amd64; elif [ "$(uname -m)" = "aarch64" ]; then ARCH=arm64; fi &&
+    curl https://dl.min.io/client/mc/release/linux-${ARCH}/mc --create-dirs -o /usr/bin/mc &&
+    chmod +x /usr/bin/mc &&
+    pip install --upgrade pip setuptools wheel &&
+    pip install cython &&
+    pip install -r https://raw.githubusercontent.com/yukiChow/nas-tools-unlock/master/requirements.txt &&
+    apk del --purge .build-deps &&
+    rm -rf /tmp/* /root/.cache /var/cache/apk/*
 COPY --chmod=755 ./rootfs /
 FROM scratch AS APP
 COPY --from=Builder / /
@@ -33,7 +33,7 @@ ENV S6_SERVICES_GRACETIME=30000 \
     NASTOOL_CN_UPDATE=true \
     NASTOOL_VERSION=master \
     PS1="\u@\h:\w \$ " \
-    REPO_URL="https://github.com/YaoShuwei/nas-tools-unlock.git" \
+    REPO_URL="https://github.com/yukiChow/nas-tools-unlock.git" \
     PYPI_MIRROR="https://pypi.tuna.tsinghua.edu.cn/simple" \
     ALPINE_MIRROR="mirrors.ustc.edu.cn" \
     PUID=0 \
@@ -41,18 +41,18 @@ ENV S6_SERVICES_GRACETIME=30000 \
     UMASK=000 \
     WORKDIR="/nas-tools"
 WORKDIR ${WORKDIR}
-RUN mkdir ${HOME} \
-    && addgroup -S nt -g 911 \
-    && adduser -S nt -G nt -h ${HOME} -s /bin/bash -u 911 \
-    && python_ver=$(python3 -V | awk '{print $2}') \
-    && echo "${WORKDIR}/" > /usr/lib/python${python_ver%.*}/site-packages/nas-tools.pth \
-    && echo 'fs.inotify.max_user_watches=5242880' >> /etc/sysctl.conf \
-    && echo 'fs.inotify.max_user_instances=5242880' >> /etc/sysctl.conf \
-    && echo "nt ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers \
-    && git config --global pull.ff only \
-    && git clone -b master ${REPO_URL} ${WORKDIR} --depth=1 --recurse-submodule \
-    && git config --global --add safe.directory ${WORKDIR} \
-    && chmod +x /nas-tools/docker/entrypoint.sh
+RUN mkdir ${HOME} &&
+    addgroup -S nt -g 911 &&
+    adduser -S nt -G nt -h ${HOME} -s /bin/bash -u 911 &&
+    python_ver=$(python3 -V | awk '{print $2}') &&
+    echo "${WORKDIR}/" >/usr/lib/python${python_ver%.*}/site-packages/nas-tools.pth &&
+    echo 'fs.inotify.max_user_watches=5242880' >>/etc/sysctl.conf &&
+    echo 'fs.inotify.max_user_instances=5242880' >>/etc/sysctl.conf &&
+    echo "nt ALL=(ALL) NOPASSWD: ALL" >>/etc/sudoers &&
+    git config --global pull.ff only &&
+    git clone -b master ${REPO_URL} ${WORKDIR} --depth=1 --recurse-submodule &&
+    git config --global --add safe.directory ${WORKDIR} &&
+    chmod +x /nas-tools/docker/entrypoint.sh
 EXPOSE 3000
 VOLUME ["/config"]
 ENTRYPOINT [ "/init" ]
