--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,8 +4,7 @@ RUN apk update && apk add bash && apk add --no-cache --virtual .build-deps \
     gcc \
     musl-dev \
     libxml2-dev \
-    libxslt-dev &&
-    apk add --no-cache $(echo $(wget --no-check-certificate -qO- https://raw.githubusercontent.com/yukiChow/nas-tools-unlock/master/package_list.txt)) &&
+    libxslt-dev && apk add --no-cache $(echo $(wget --no-check-certificate -qO- https://raw.githubusercontent.com/yukiChow/nas-tools-unlock/master/package_list.txt)) &&
     ln -sf /usr/bin/python3 /usr/bin/python &&
     curl https://rclone.org/install.sh | bash &&
     if [ "$(uname -m)" = "x86_64" ]; then ARCH=amd64; elif [ "$(uname -m)" = "aarch64" ]; then ARCH=arm64; fi &&
