--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,17 @@ jobs:
         name: Checkout
         uses: actions/checkout@master
 
+      - 
+        name: Set Up Python3.10.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10.11'
+          architecture: 'x64'
+          
+      - 
+        name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+
       -
         name: Release version
         id: release_version
